# geneweave

./: .gitignore  GITHUB.md  README.md  interface.py  main.py  pyproject.toml  requirements.txt  viewer.py
.github/workflows/: build-desktop.yml  ci.yml  publish-docs.yml
annotation/: __init__.py  __main__.py  cache.py  cli.py  config.py  export.py  gui.py  http.py  paths.py  summary.py
annotation/databases/: __init__.py  ensembl.py  go.py  kegg.py  ncbi.py  pdb.py  pfam.py  prosite.py  string_db.py  uniprot.py
annotation/templates/: table_head.html  table_head_2.html  table_head_2_entete.html
docs/: _quarto.yml  desktop.qmd  how-it-works.qmd  index.qmd  output-files.qmd  prerequisites.qmd  render.py  usage.qmd
packaging/: geneweave.spec
scripts/: build_deb.sh  build_linux.sh  build_windows.bat
viewer/: __init__.py  app.py
viewer/templates/: base.html  index.html  view.html
